fixes the z-index of tooltips

--- a/src/sass/_tooltip.scss
+++ b/src/sass/_tooltip.scss
@@ -6,7 +6,7 @@
     padding: 8px 10px;
     font-family: "GDS Transport", Arial, sans-serif !important;
     font-size: 12pt !important;
-    z-index: 999999;
+    z-index: 999999999;
     font-weight: normal;
     line-height: 1.3rem;
 }
